tests/rosetta/transpiler/Swift/conditional-structures-3.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden3439485953/001/main.swift:11:13: error: 'nil' requires a contextual type
 9 | func example3(_ a: Bool, _ b: Bool) {
10 |     if a {
11 |         _ = nil
   |             `- error: 'nil' requires a contextual type
12 |     } else if b {
13 |         _ = nil

/tmp/TestSwiftTranspiler_Rosetta_Golden3439485953/001/main.swift:13:13: error: 'nil' requires a contextual type
11 |         _ = nil
12 |     } else if b {
13 |         _ = nil
   |             `- error: 'nil' requires a contextual type
14 |     }
15 |     
