tests/rosetta/transpiler/Swift/conditional-structures-3.swift
// Generated by Mochi transpiler v0.10.52 on 2025-08-01 22:07:30 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

func example3(_ a: Bool, _ b: Bool) {
    if a {
        _ = nil
    } else if b {
        _ = nil
    }
    
}
